<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/action_bar"
        layout="@layout/actionbar" />

    <LinearLayout
        android:layout_below="@+id/action_bar"
        android:paddingBottom="@dimen/screen_vertical_margin"
        android:paddingLeft="@dimen/screen_horizontal_margin"
        android:paddingRight="@dimen/screen_horizontal_margin"
        android:paddingTop="@dimen/screen_vertical_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/offer_title_header_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/text_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/product"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/offer_image_dimen"
                    android:id="@+id/image_image"
                    android:layout_gravity="center" />

                <com.balysv.materialripple.MaterialRippleLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:layout_marginTop="@dimen/dp10"
                    app:mrl_rippleOverlay="true"
                    android:padding="@dimen/button_padding"
                    app:mrl_rippleDelayClick="false"
                    android:id="@+id/button_addOffer"
                    app:mrl_rippleHover="true">

                    <TextView
                        android:gravity="center"
                        android:padding="@dimen/button_padding"
                        android:textColor="@android:color/white"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/add_offer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.balysv.materialripple.MaterialRippleLayout>

                <TableLayout
                    android:layout_margin="@dimen/dp10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow android:gravity="center">

                        <TextView
                            android:textColor="@color/primary_text"
                            android:paddingTop="@dimen/dp2"
                            android:paddingBottom="@dimen/dp2"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/list_price"
                            android:gravity="center" />

                        <TextView
                            android:textColor="@color/primary_text"
                            android:padding="@dimen/dp2"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/discount"
                            android:gravity="center" />

                        <TextView
                            android:textColor="@color/primary_text"
                            android:padding="@dimen/dp2"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/savings"
                            android:gravity="center" />

                        <TextView
                            android:textColor="@color/primary_text"
                            android:padding="@dimen/dp2"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/views"
                            android:gravity="center" />
                    </TableRow>

                    <TableRow android:gravity="center">

                        <TextView
                            android:id="@+id/text_listPrice"
                            android:textStyle="bold"
                            android:textColor="@color/primary_text"
                            android:paddingTop="@dimen/dp2"
                            android:paddingBottom="@dimen/dp2"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="Medium Text"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/text_discount"
                            android:textStyle="bold"
                            android:textColor="@color/primary_text"
                            android:padding="@dimen/dp2"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="Medium Text"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/text_savings"
                            android:textStyle="bold"
                            android:textColor="@color/primary_text"
                            android:padding="@dimen/dp2"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="Medium Text"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/text_views"
                            android:textStyle="bold"
                            android:textColor="@color/primary_text"
                            android:paddingTop="@dimen/dp2"
                            android:paddingBottom="@dimen/dp2"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="1000+"
                            android:gravity="center" />
                    </TableRow>
                </TableLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="description"
                    android:id="@+id/text_description" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>